[metadata]
name = py2store
version = 0.0.14
url = https://github.com/i2mint/py2store
platforms = any
description_file = README.md
description = Tools to create simple and consistent interfaces to complicated and varied data sources.
long_description = file:README.md
root_url = https://github.com/i2mint
author = Thor Whalen
license = Apache
description-file = README.md
keywords = 
		storage
		interface
classifiers = 
		Intended Audience :: Developers
		Topic :: Software Development
		License :: OSI Approved :: Apache Software License
		Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	dol
