[metadata]
name = py2store
version = 0.1.9
url = https://github.com/i2mint/py2store
platforms = any
description_file = README.md
description = Tools to create simple and consistent interfaces to complicated and varied data sources.
long_description = file:README.md
long_description_content_type = text/markdown
root_url = https://github.com/i2mint
author = OtoSense
author_email = thorwhalen1@gmail.com
license = mit
description-file = README.md
keywords =
    storage
    interface
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    dol
    config2py
    importlib_resources

[options.extras_require]
test =
    pytest

